syntax = "proto3";
option java_multiple_files = true;
package io.github.bfeng.simplemapred.workflow;

message RunMapperRequest {
    string inputFile = 1;
}

message RunMapperResponse {
    int32 status = 1;
}

service MapperService {
    rpc runMapper (RunMapperRequest) returns (RunMapperResponse);
}